--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   qr_code_scanner: ^0.6.1
   qr_flutter: ^4.0.0
   modal_bottom_sheet: ^2.0.0
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
