--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   qr_flutter: ^4.0.0
   modal_bottom_sheet: ^2.0.0
   url_strategy: ^0.2.0
+  socket_io_client: ^2.0.0-beta
 
 dev_dependencies:
   flutter_test:
